--- a/Snackapp/app/src/main/res/layout/snackbar_layout.xml
+++ b/Snackapp/app/src/main/res/layout/snackbar_layout.xml
@@ -286,8 +286,8 @@
                     android:src="@mipmap/kfc" />
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:text="KFC - Binnenwegplein 68"
                     android:id="@+id/Stitle7"
